--- a/src/app/examples/crud/components/crud.component.html
+++ b/src/app/examples/crud/components/crud.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>{{ 'anms.examples.crud.title' | translate }}</h1>
+  <h1 i18n="@@anms.examples.crud.title">CRUD books using @ngrx/entity & @ngrx/router-store</h1>
   <div class="row">
     <div class="col-md-6">
       <h2>{{ 'anms.examples.crud.subtitle1' | translate }}</h2>
