Add videogular, starting login, wip

--- a/src/app/videos/videos.component.scss
+++ b/src/app/videos/videos.component.scss
@@ -1,9 +1,11 @@
 
+.videoRow {
+  margin-top: 20px;
+}
+
 vg-player {
-
-  /*   max-width: 1024px;
-     height: auto;*/
-
+  max-width: 1280px;
+  height: auto;
 }
 
 .custom-slider .ng5-slider {
