--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -1,44 +1,69 @@
-<div>
-    <!-- [vgHls]="'http://184.72.239.149/vod/smil:BigBuckBunny.smil/playlist.m3u8'"-->
-    <!--  http://sample.vodobox.com/planete_interdite/planete_interdite_alternate.m3u8-->
-    <vg-player (onPlayerReady)="onPlayerReady($event)">
-        <video #vgMedia
-               [vgMedia]="vgMedia"
-               [vgHls]="'https://bitdash-a.akamaihd.net/content/sintel/hls/playlist.m3u8'"
-               (onGetBitrates)="hlsBitrates = $event"
-               id="myVideo"
-               type="video/mp4"
-               controls
-               crossorigin
-        >
-            <track
-                    src="../../assets/default.vtt"
-                    kind="metadata"
-                    label="Cue Points"
-                    vgCuePoints
-                    (onEnterCuePoint)="onEnterCuePoint($event)"
+<div class="containerX videoRow">
+    <div fxLayout='row' class="zero">
+        <vg-player (onPlayerReady)="onPlayerReady($event)" fxFlex="1280px" class="one" fxLayout="row">
+            <video #vgMedia
+                   #vgHls="vgHls"
+                   [vgMedia]="vgMedia"
+                   [vgHls]="'../assets/playlist.m3u8'"
+                   (onGetBitrates)="onGetBitrates($event, vgHls)"
+                   id="myVideo"
+                   controls
+                   crossorigin
             >
-        </video>
-    </vg-player>
+                <!-- type="video/mp4"-->
+
+                <track
+                        src="../../assets/default.vtt"
+                        kind="metadata"
+                        label="Cue Points"
+                        vgCuePoints
+                        (onEnterCuePoint)="onEnterCuePoint($event)"
+                >
+            </video>
+        </vg-player>
 
 
-    <div class="custom-slider">
+        <div fxFlex="30" class="two" fxLayout="row" fxFlexFill>
+            <mat-chip-list>
+                <mat-chip>TCIN: {{tcin}}
+                    <button mat-button (click)="seekTcIn($event)">Seek</button>
+                </mat-chip>
+                <mat-chip>TCOUT: {{tcout}}
+                    <button mat-button (click)="seekTcOut($event)">Seek</button>
+                </mat-chip>
+            </mat-chip-list>
 
-
+        </div>
+    </div>
+</div>
+<div class="containerX">
+    <div class="custom-slider" fxFlex="column" fxFlexFill>
         <ng5-slider
                 [(value)]="minValue"
                 [(highValue)]="maxValue"
                 [options]="options"
                 (userChange)="updateValue($event)"
         ></ng5-slider>
-        <mat-chip-list>
-            <mat-chip>TCIN: {{tcin}}
-                <button mat-button (click)="seekTcIn($event)">Seek</button>
-            </mat-chip>
-            <mat-chip>TCOUT: {{tcout}}
-                <button mat-button (click)="seekTcOut($event)">Seek</button>
-            </mat-chip>
-        </mat-chip-list>
-    </div>
+        <img [src]="'http:'+thumb">
+        <p>{{currentThumbnail$ | async}}</p>
+        <p>{{currentThumbnail$ | async}}</p>
+        <div *ngIf="currentThumbnail$ | async as currentThumbnail">
+            <p>{{currentThumbnail}}</p>
+        </div>
+        <p>{{ duration }}</p>
+        <p>{{ thumb }}</p>
+        <p>{{ test }}</p>
+        <p>{{ vgMedia }}</p>
 
+    </div>
 </div>
+
+
+<!-- [vgHls]="'http://184.72.239.149/vod/smil:BigBuckBunny.smil/playlist.m3u8'"-->
+<!--  http://sample.vodobox.com/planete_interdite/planete_interdite_alternate.m3u8-->
+<!--
+    'https://bitdash-a.akamaihd.net/content/sintel/hls/playlist.m3u8'
+-->
+
+
+
