--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -86,37 +86,8 @@
 
       <div class="footer">
         <div class="row">
-          <div class="col-sm-12 links">
-            <a href="https://www.github.com/tomastrajan" target="_blank">
-              <fa-icon [icon]="['fab','github']"></fa-icon>
-              <span>Github</span>
-            </a>
-            <a href="https://www.medium.com/@tomastrajan" target="_blank">
-              <fa-icon [icon]="['fab','medium-m']"></fa-icon>
-              <span>Medium</span>
-            </a>
-            <a href="https://www.twitter.com/tomastrajan" target="_blank">
-              <fa-icon [icon]="['fab','twitter']"></fa-icon>
-              <span>Twitter</span>
-            </a>
-            <a href="https://www.youtube.com/channel/UC7XgRHIVoqnh3U5Vmly9ofQ"
-               target="_blank">
-              <fa-icon [icon]="['fab','youtube']"></fa-icon>
-              <span>Youtube</span>
-            </a>
-            <a href="https://www.instagram.com/tomastrajan" target="_blank">
-              <fa-icon [icon]="['fab','instagram']"></fa-icon>
-              <span>Instagram</span>
-            </a>
-            <a href="https://www.slides.com/tomastrajan" target="_blank">
-              <fa-icon icon="play-circle"></fa-icon>
-              <span>Slides</span>
-            </a>
-          </div>
-        </div>
-        <div class="row">
           <div class="col-12 signature">
-            &#169; <span class="year" data-testid="footer-year">{{year}}</span> - Tomas Trajan
+            &#169; <span class="year" data-testid="footer-year">{{year}}</span> - Hexaglobe
             <br class="d-block d-sm-none">
             <a [matTooltip]="'anms.footer.changelog' | translate"
                matTooltipPosition="before"
