--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 
 @import '../node_modules/bootstrap/scss/bootstrap-reboot';
 @import '../node_modules/bootstrap/scss/bootstrap-grid';
+@import '../node_modules/videogular2/fonts/videogular.css';
 @import 'styles-reset';
 
 @import '../node_modules/@angular/material/theming';
