--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -1,96 +1,79 @@
-<div>
+<div gdColumns="repeat(4, 1fr)" gdGap="15px" class="containerX">
 
-    <div fxLayout="row wrap" class="containerX videoRow zero" fxLayoutAlign="flex-start"
-         fxLayout.xs="column"
-         fxLayoutGap="1%"
 
-    >
-        <vg-player (onPlayerReady)="onPlayerReady($event)"
-                   fxFlex="67%"
-                   class="one"
-                   gdColumn="1/2"
-                   gdRow="1/3"
+    <vg-player (onPlayerReady)="onPlayerReady($event)" class="one" gdColumn="1/3" gdRow="1/3">
+        <vg-overlay-play></vg-overlay-play>
+        <vg-buffering></vg-buffering>
+        <vg-controls vgFor="myVideo" [vgAutohide]="true" [vgAutohideTime]="5">
+            <vg-play-pause></vg-play-pause>
+            <vg-time-display vgFor="myVideo" [vgProperty]="'current'" [vgFormat]="'hh:mm:ss'"></vg-time-display>
+            <vg-scrub-bar vgFor="myVideo" [vgSlider]="true">
+                <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
+                <vg-scrub-bar-buffering-time></vg-scrub-bar-buffering-time>
+                <!--
+                            <anms-scrub-bar-thumbnails [totalTime]="totalTime" [duration]="duration" [vgThumnails]="thumbnails"></anms-scrub-bar-thumbnails>
+                -->
+            </vg-scrub-bar>
+            <vg-time-display vgFor="myVideo" [vgProperty]="'left'" [vgFormat]="'hh:mm:ss'"></vg-time-display>
+            <vg-playback-button [playbackValues]="[ '1.0', '2.0', '4.0' ]"></vg-playback-button>
+            <vg-track-selector vgFor="myVideo"></vg-track-selector>
+            <vg-volume vgFor="myVideo"></vg-volume>
+            <!-- more components here -->
+        </vg-controls>
+        <video #vgMedia
+               #vgHls="vgHls"
+               [vgMedia]="vgMedia"
+               [vgHls]="'../assets/playlist.m3u8'"
+               (onGetBitrates)="onGetBitrates($event, vgHls, tcin, tcout)"
+               id="myVideo"
+               crossorigin
         >
-            <vg-overlay-play></vg-overlay-play>
-            <vg-buffering></vg-buffering>
-            <vg-controls vgFor="myVideo" [vgAutohide]="true" [vgAutohideTime]="5">
-                <vg-play-pause></vg-play-pause>
-                <vg-time-display vgFor="myVideo" [vgProperty]="'current'" [vgFormat]="'hh:mm:ss'"></vg-time-display>
-                <vg-scrub-bar vgFor="myVideo" [vgSlider]="true">
-                    <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
-                    <vg-scrub-bar-buffering-time></vg-scrub-bar-buffering-time>
-                    <!--
-                                <anms-scrub-bar-thumbnails [totalTime]="totalTime" [duration]="duration" [vgThumnails]="thumbnails"></anms-scrub-bar-thumbnails>
-                    -->
-                </vg-scrub-bar>
-                <vg-time-display vgFor="myVideo" [vgProperty]="'left'" [vgFormat]="'hh:mm:ss'"></vg-time-display>
-                <vg-playback-button [playbackValues]="[ '1.0', '2.0', '4.0' ]"></vg-playback-button>
-                <vg-track-selector vgFor="myVideo"></vg-track-selector>
-                <vg-volume vgFor="myVideo"></vg-volume>
-                <!-- more components here -->
-            </vg-controls>
-            <video #vgMedia
-                   #vgHls="vgHls"
-                   [vgMedia]="vgMedia"
-                   [vgHls]="'../assets/playlist.m3u8'"
-                   (onGetBitrates)="onGetBitrates($event, vgHls, tcin, tcout)"
-                   id="myVideo"
-                   crossorigin
+            <track
+                    src="../../assets/default.vtt"
+                    kind="metadata"
+                    label="Cue Points"
+                    vgCuePoints
+                    (onEnterCuePoint)="onEnterCuePoint($event)"
             >
-                <track
-                        src="../../assets/default.vtt"
-                        kind="metadata"
-                        label="Cue Points"
-                        vgCuePoints
-                        (onEnterCuePoint)="onEnterCuePoint($event)"
-                >
-            </video>
-        </vg-player>
+        </video>
+    </vg-player>
 
+    <div class="two" gdColumn="3/4" gdRow="1/2">
+        <mat-card>
+            <mat-chip-list>
+                <mat-chip>TCIN: {{tcin}}
+                    <button mat-button (click)="seekTcIn($event)">Seek</button>
+                </mat-chip>
+            </mat-chip-list>
+            <img [src]="'http:'+thumb">
 
-        <div fxFlex="15%" class="two" gdColumn="2/3"
-             gdRow="1/2">
-            <mat-card>
-                <mat-chip-list>
-                    <mat-chip>TCIN: {{tcin}}
-                        <button mat-button (click)="seekTcIn($event)">Seek</button>
-                    </mat-chip>
-                </mat-chip-list>
-                <img [src]="'http:'+thumb">
+        </mat-card>
+    </div>
+    <div class="two" gdColumn="4" gdRow="1/2">
 
-            </mat-card>
-        </div>
-        <div fxFlex="15%" class="two" gdColumn="3"
-             gdRow="1/2">
+        <mat-card>
+            <mat-chip-list>
 
-            <mat-card>
-                <mat-chip-list>
+                <mat-chip>TCOUT: {{tcout}}
+                    <button mat-button (click)="seekTcOut($event)">Seek</button>
+                </mat-chip>
+            </mat-chip-list>
+            <img [src]="'http:'+thumb">
 
-                    <mat-chip>TCOUT: {{tcout}}
-                        <button mat-button (click)="seekTcOut($event)">Seek</button>
-                    </mat-chip>
-                </mat-chip-list>
-                <img [src]="'http:'+thumb">
+        </mat-card>
 
-            </mat-card>
-
-
-        </div>
-        <p gdColumn="2"
-           gdRow="2/3">Duration: {{getCutDuration(tcInTimestamp, tcOutTimestamp)}}</p>
 
     </div>
-    <div class="containerX">
-        <div class="custom-slider" fxFlex="column" fxFlexFill>
-            <ng5-slider
-                    [(value)]="tcInTimestamp ? tcInTimestamp : tLminValue"
-                    [(highValue)]="tcOutTimestamp ? tcOutTimestamp : tLmaxValue"
-                    [options]="tLoptions"
-                    (userChange)="updateValue($event)"
-            ></ng5-slider>
-        </div>
+    <mat-card gdColumn="3" gdRow="2/3">Sequence duration: {{getCutDuration(tcInTimestamp, tcOutTimestamp)}}</mat-card>
+    <div class="custom-slider" gdColumn="1/5" gdRow="3">
+        <ng5-slider
+                [(value)]="tcInTimestamp ? tcInTimestamp : tLminValue"
+                [(highValue)]="tcOutTimestamp ? tcOutTimestamp : tLmaxValue"
+                [options]="tLoptions"
+                (userChange)="updateValue($event)"
+        ></ng5-slider>
     </div>
-
+    <div class="cuepoints" gdColumn="1/5" gRow="4"></div>
 </div>
 
 <!-- [vgHls]="'http://184.72.239.149/vod/smil:BigBuckBunny.smil/playlist.m3u8'"-->
