--- a/src/app/videos/videos.component.scss
+++ b/src/app/videos/videos.component.scss
@@ -1,6 +1,30 @@
 
+ng5-slider {
+  bottom: 161px;
+}
+
+.custom-slider {
+  margin-top: 50px;
+}
+
 .videoRow {
   margin-top: 20px;
+}
+.thumbnails {
+  overflow: auto;
+  width: 100%;
+  height: auto;
+  position: relative;
+  background-color: #181818;
+
+  .thumb-time {
+    width: 50%;
+  }
+  .timeline-image {
+    max-width: 100%;
+    height: 85px;
+  }
+
 }
 
 vg-player {
@@ -18,7 +42,7 @@ vg-player {
   overflow: auto;
 }
 
-.custom-slider .ng5-slider {
+.ng5-slider {
   height: 90px;
 
   .ng5-slider-bar-wrapper {
@@ -30,31 +54,34 @@ vg-player {
 .cuepoints {
   background: #c2c2c2;
   width: auto;
-  height: 120px;
+  height: 50px;
+  position: relative;
+  bottom: 155px;
 }
 
 // We need to use ::ng-deep to overcome view encapsulation
 ::ng-deep {
-  .custom-slider .ng5-slider .ng5-slider-bar {
-    height: 90px;
+  .containerX .ng5-slider .ng5-slider-bar {
+    height: 115px;
   }
 
-  .ng5-slider {
+  .containerX .ng5-slider {
     .ng5-slider-bar {
-      background: rgba(35, 35, 35, 0.83) !important;
+      background: rgba(35, 35, 35, 0.03) !important;
 
       &.ng5-slider-selection {
+
         border-top: solid 3px firebrick;
         border-bottom: solid 3px firebrick;
-        background-color: #4c555a !important;
+        background-color: rgba(80, 80, 80, 0.5) !important;
       }
     }
   }
 
-  .custom-slider .ng5-slider .ng5-slider-pointer {
+  .containerX .ng5-slider .ng5-slider-pointer {
     cursor: col-resize;
     width: 3px;
-    height: 104px;
+    height: 134px;
     color: firebrick !important;
     background-color: firebrick !important;
     border-radius: 0;
@@ -72,27 +99,27 @@ vg-player {
 
   }
 
-  .custom-slider .ng5-slider .ng5-slider-pointer:after {
+  .containerX .ng5-slider .ng5-slider-pointer:after {
     display: none;
   }
 
-  .custom-slider .ng5-slider .ng5-slider-bubble {
+  .containerX .ng5-slider .ng5-slider-bubble {
     bottom: 100px;
   }
 
-  .custom-slider .ng5-slider .ng5-slider-limit {
+  .containerX .ng5-slider .ng5-slider-limit {
 
   }
 
-  .custom-slider .ng5-slider .ng5-slider-tick {
+  .containerX .ng5-slider .ng5-slider-tick {
 
   }
 
-  .custom-slider .ng5-slider .ng5-slider-selection {
+  .containerX .ng5-slider .ng5-slider-selection {
     color: rgba(15, 15, 15, 0.5)
   }
 
-  .custom-slider .ng5-slider .ng5-slider-tick.ng5-slider-selected {
+  .containerX .ng5-slider .ng5-slider-tick.ng5-slider-selected {
 
   }
 }
